# learnoops

./: .gitignore  CMakeLists.txt  README.md
Animal/: Animal.cpp  CMakeLists.txt
Distance/: CMakeLists.txt  Distance.cpp
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
Jatting/: CMakeLists.txt  main.cpp
Test_ANSI_cpp_support/: CMakeLists.txt
c/: duff_device  duff_device.c
c/add/: add.c  add.h  add_program.c  compile  main.c  makefile
c/hello/: hellofunc.c  hellomake  hellomake.c  hellomake.h  makefile
c/jatting/: main.c
c/obj_cmds/: a.s  test.c
oops/Animal/: Animal.h  main.cpp  makefile
oops/Distance/: Distance.h  main.cpp  makefile
oops/HelloWorld/: HelloWorld.cpp  makefile
oops/Jatting/: main.cpp
oops/Test_ANSI_cpp_support/: Test_ANSI_cpp_support.cpp
placement_new/: CMakeLists.txt
placement_new/src/: main.cpp
python/: hello_world.py
